# xbot-next

./: .dockerignore  .env.docker.example  .env.example  .env.local.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
configs/: xbot.toml
data/agent/memories/: MEMORY.md  USER.md
docker/: entrypoint.sh
docs/: backend-framework-design.md  docker-deployment.md  frontend-control-ui.md  hermes-agent-integration.md  production-deployment.md
migrations/: README.md  env.py
migrations/versions/: 0001_initial_schema.py  0002_message_sender_name.py  0003_agent_background_tasks.py  0004_adapter_states.py  0005_agent_scheduled_jobs.py  0006_wechat_contacts_attachments_profiles.py  0007_conversation_avatar.py  0008_profile_batch_indexes.py
plugins/: PLUGIN_DEVELOPMENT_GUIDE.md
plugins/GroupMonitor/: config.toml  main.py  plugin.toml
plugins/GroupSocialGraph/: README.md  __init__.py  config.toml  main.py  plugin.toml
plugins/GroupWelcome/: config.toml  main.py  plugin.toml
plugins/JaysonChatSummary/: README.md  __init__.py  config.toml  group_chat_summary_card_template.html  group_chat_summary_card_template_forest.html  group_chat_summary_card_template_light.html  group_chat_summary_card_template_retro.html  group_chat_summary_card_template_sunset.html  main.legacy.py  main.py  plugin.toml
plugins/JaysonChatSummary/data/: render-test.html
plugins/OpenClawBridge/: OPENCLAW_4_5_DEPLOY.md  README.md  __init__.py  config.toml  main.legacy.py  main.light.py  main.py  plugin.toml
plugins/OpenClawBridge/openclaw/: index.ts  openclaw.plugin.json  package.json
plugins/agent_chat/: main.py  plugin.toml
plugins/echo/: main.py  plugin.toml
plugins/manage_plugin/: config.toml  main.py  plugin.toml
plugins/openclaw_bridge/: config.toml  main.py  plugin.toml
scripts/: install.ps1  install.sh  upgrade.ps1  upgrade.sh
skills/.agent/: .usage.json
skills/.agent/.curator/: README.md
skills/.agent/.templates/: README.md  SKILL.md.template  skill.toml.template
skills/.agent/xbot-self-evolution/: SKILL.md  skill.toml
skills/code_assistant/: SKILL.md  skill.toml
skills/openclaw-skill/xbot_wechat_history/: SKILL.md  query_history.py  skill.toml
skills/openclaw-skill/xbot_wechat_profile/: SKILL.md  _meta.json  profile_user.py  skill.toml
skills/openclaw-skill/微信发送skill/: SKILL.md  send_869_media.py  send_voice_auto.py
skills/openclaw-skill/音乐skill/: SKILL.md  _meta.json  lucky_music.py
skills/微信发送skill/: SKILL.md  _meta.json  send_869_media.py  send_voice_auto.py  skill.toml
src/xbot/adapters/: base.py  registry.py
src/xbot/agent/: background.py  cache.py  compression.py  hermes_runtime.py  llm.py  mcp.py  memory.py  planner.py  policy.py  runtime.py  scheduler.py  todo.py  tool_call_parser.py  tool_executor.py  tool_registry.py  wiki.py  workspace.py
src/xbot/app/: deps.py  lifespan.py  main.py  security.py
src/xbot/cli/: bridge.py  chat.py  main.py  setup.py  tui.py
src/xbot/conversations/: context_window.py  manager.py  models.py  session_store.py
src/xbot/core/: config.py  events.py  exceptions.py  logging.py  security.py
src/xbot/messaging/: consumer.py  dedupe.py  memory_queue.py  message_store.py  models.py  pipeline.py  queue.py  queue_factory.py  redis_queue.py  reply_router.py
src/xbot/plugins/: base.py  context.py  loader.py  manager.py  manifest.py  permissions.py  registry.py
src/xbot/runtime/: context.py  (+4 more)
tests/: conftest.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: api.ts  styles.css  types.ts
(+98 files in other folders)
