[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xbot-next"
version = "0.1.0"
description = "Modular async-first backend framework for xbot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "aiohttp>=3.9.0",
  "anyio>=4.0.0",
  "asyncpg>=0.30.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "loguru>=0.7.2",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "redis>=5.0.0",
  "sqlalchemy>=2.0.30",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0"
]
mcp = [
  "mcp>=1.0.0"
]
browser = [
  "playwright>=1.45.0"
]

[project.scripts]
xbot = "xbot.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
