[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "xbot-next"
version = "0.1.0"
description = "Modular async-first backend framework for xbot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "aiohttp>=3.9.0",
  "aiosqlite>=0.20.0",
  "anyio>=4.0.0",
  "asyncpg>=0.30.0",
  "croniter>=6.0.0",
  "cryptography>=42.0.0",
  "curl_cffi>=0.7.0",
  "fire>=0.7.1",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.6",
  "loguru>=0.7.2",
  "psutil>=7.2.2",
  "PyJWT[crypto]>=2.12.1",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.2.2",
  "python-multipart>=0.0.20",
  "pyyaml>=6.0.3",
  "redis>=5.0.0",
  "requests>=2.33.0",
  "rich>=13.7.0",
  "ruamel.yaml>=0.18.17",
  "sqlalchemy>=2.0.30",
  "tenacity>=9.1.4",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
agent = [
  "anthropic==0.87.0",
  "mcp>=1.0.0",
  "openai>=2.24.0",
  "prompt-toolkit>=3.0.43",
  "textual>=0.79.0"
]
browser = [
  "playwright>=1.45.0"
]
full = [
  "anthropic==0.87.0",
  "mcp>=1.0.0",
  "openai>=2.24.0",
  "prompt-toolkit>=3.0.43",
  "textual>=0.79.0",
  "playwright>=1.45.0"
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0"
]
[project.scripts]
xbot = "xbot.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
